css/styles.css
/*
	
	General Styles

*/
* {
  box-sizing: border-box; }

body {
  margin: 0; }

/*

	Containers

*/
.buttons {
  height: 114px;
  padding: 20px;
  background: #cfcfcf;
  padding-bottom: 0;
  position: relative;
  z-index: 3;
  -webkit-transition: 'all, 370ms, ease-in-out';
          transition: 'all, 370ms, ease-in-out'; }
  .buttons button {
    display: inline-block;
    padding: 7px 8px;
    margin-right: 10px;
    margin-bottom: 20px; }

.tracks {
  position: absolute;
  top: 0;
  left: 0;
  padding: 10px 0;
  padding-top: 124px;
  width: 100%;
  height: 100%;
  overflow-x: scroll; }
  .tracks .track {
    float: left;
    width: 300px;
    padding: 10px;
    border-radius: 4px;
    background: #fafafa;
    border: 1px solid #cfcfcf;
    overflow: scroll;
    margin-right: 10px; }

